--- a/_posts/2019-12-25-the-us-narrative-today.html
+++ b/_posts/2019-12-25-the-us-narrative-today.html
@@ -915,107 +915,107 @@ stories:
   domain: http://www.memphisflyer.com/
   link: https://www.memphisflyer.com/memphis/high-noon-at-lucky-cat-opening-soon/Content?oid=21979831
 images:
-- name: stalin-time-going-to-dowtown-los-angeles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-going-to-dowtown-los-angeles.jpg
-- name: supreme-court-supremecourt-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-ww2-color.jpg
-- name: white-house-whitehouse-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-ww2-color.jpg
-- name: walled-garden-walled-garden-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-crunch-paper.jpg
-- name: cyber-api-description-wars-img-1910.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-img-1910.jpg
-- name: containership-containership-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-granite.jpg
-- name: beach-clouds-lifeguard-beachclouds-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-umberto-bocc.jpg
-- name: wreck-IMG_6984.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-IMG_6984.jpg
-- name: fence-fence-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-marcel-duchamp.jpg
-- name: old-barn-old-barn-1500.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500.jpg
-- name: death-valley-death-valley-national-park-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-nazi-poster.jpg
-- name: old-door-lock-old-door-lock-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-green-zuma.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-mucha-mult.jpg
-- name: adam-smith-adam-smith-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-wols.jpg
-- name: birdhouse-birdhouse-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-satan-red.jpg
-- name: blossombar-hot-spicy-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-hot-spicy-file-00-00-24-99.jpg
-- name: copper-circuit-downtown-berlin-crowds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-downtown-berlin-crowds.jpg
-- name: blossombar-sand-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sand-paper-file-00-00-00-00.jpg
-- name: braceros-domingo-ulloa-docks-big-cosco-ship.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-docks-big-cosco-ship.jpg
-- name: nyc-flag-nycflag-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-plentiful.jpg
-- name: copper-circuit-old-piano-paris-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-piano-paris-hospital.jpg
-- name: wind-mills-windmills-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dark-dali.jpg
-- name: legal-statue-legalstatue-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-light-dali.jpg
-- name: stories-cargo-ship-on-sea-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-atari-missle.jpg
-- name: lincoln-memorial-lincolnmemorial-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-atari-missle.jpg
-- name: mosaic-face-mosaic-face-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-smooth-ride.jpg
-- name: braceros-domingo-ulloa-satellite-dishes-pointing-up.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-satellite-dishes-pointing-up.jpg
-- name: border-fence-border-fence-on-hill-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-diego-rivera1.jpg
-- name: meadowbutterfly-meadow-butterfly-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-creativity.jpg
-- name: razorwire-DSC-0080-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-creativity.jpg
-- name: fence-mexico-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-atari-missle.jpg
-- name: cargo-ship-cargo-ship-on-sea-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-crabapple.jpg
-- name: rockingchair-rockingchair-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-nazi-poster.jpg
-- name: hollywood-building-hollywood-building-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-bright-sand.jpg
-- name: old-gas-pumps-oldgaspumps-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-purple-storm.jpg
-- name: aws-s3-stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
-- name: meadowbutterfly-meadow-butterfly-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-kandinsky-bv.jpg
-- name: stories-containership-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-containership-blue-circuit.jpg
-- name: bordercrossing-bordercrossing-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-mucha-mult.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-gred-mash.jpg
-- name: window-window-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-smoking-cigarette.jpg
-- name: adam-smith-adam-smith-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dark-soul.jpg
-- name: copper-circuit-nyc-streets-laundromat.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-nyc-streets-laundromat.jpg
-- name: wind-mills-windmills-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-hot-spicy.jpg
-- name: blossombar-blue-brush-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-brush-file-00-00-24-99.jpg
-- name: copper-circuit-british-black-cab-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-british-black-cab-street.jpg
-- name: crow-crow-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-cinnamon-rolls.jpg
-- name: dragon-desert-desert-dragon-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-neo-instinct.jpg
-- name: carry-load-carryload-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-gan-vogh.jpg
-- name: downtheline-downtheline-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-diego-rivera1.jpg
-- name: aws-s3-square-C3JdRtDWMAUqS6L-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C3JdRtDWMAUqS6L-square.jpg
+- name: ellis-island-ellis-island-room-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-light-dali.jpg
+- name: aws-s3-stories-umberto-boccioni-dynamism-of-a-soccer-player-angel-statue-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-umberto-boccioni-dynamism-of-a-soccer-player-angel-statue-1.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory.jpg
+- name: scream-DSC_0169.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0169.jpg
+- name: stories-new-path-in-the-woods-black-white.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-path-in-the-woods-black-white.jpg
+- name: old-granary-field-granaryfield-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-neo-instinct.jpg
+- name: containership-containership-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-bright-sand.jpg
+- name: stalin-time-old-gas-station_36588462091_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-gas-station_36588462091_o.jpg
+- name: nazi-invasion-old-piano-playing-hospital.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-piano-playing-hospital.jpg
+- name: catacombs-catacombs-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-yellow-paper.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-ww2-dresden.jpg
+- name: containership-containership-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-sunday.jpg
+- name: rockingchair-rockingchair-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-matrix.jpg
+- name: aws-s3-stories-new-43-150-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-43-150-800-500-0-max-0--5--5.jpg
+- name: adam-smith-adam-smith-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-oily-mcoilface.jpg
+- name: capital-battle-capitolbattle-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-hot-spicy.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-purple-storm.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-purple-storm.png
+- name: oldcabin-store.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store.jpg
+- name: downtown-los-angeles-downtown-la-horiz-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-horiz-circuit.JPG
+- name: old-school-house-old-schoolhouse-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-mucha-mult.jpg
+- name: white-house-whitehouse-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-aqua.jpg
+- name: supreme-court-supremecourt-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-diego-rivera1.jpg
+- name: curtain-curtain-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-atari-asteroids.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-rainbow-festival.jpg
+- name: copper-circuit-colonial-solider-pointing.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-colonial-solider-pointing.jpg
+- name: flower-barbed-wire-flower-barbed-wire-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-attack-planes.jpg
+- name: bf-skinner-old-piano-paris-hospital.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-piano-paris-hospital.jpg
+- name: oldhouse-granaryfield-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-hot-spicy.jpg
+- name: locked-up-steam-lock-up-steam-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-copper-circuit.jpg
+- name: locked-up-steam-lock-up-steam-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-oily-mcoilface.jpg
+- name: mediterranean-mediterranean-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-ww2-dresden.jpg
+- name: bf-skinner-subway-brooklyn-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-subway-brooklyn-station.jpg
+- name: birdhouse-birdhouse-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-crunch-paper.jpg
+- name: aws-s3-dunes-dunes-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-dunes-dunes-still.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-graham-sutherland.jpg
+- name: ellis-island-ellisisland-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-wols.jpg
+- name: white-house-lawn-white-house-lawn-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-smoking-cigarette.jpg
+- name: curtain-curtain-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-constitution.jpg
+- name: status-berlin-status-berlin-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-gan-vogh.jpg
+- name: oldhouse-oldhouse-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-ww2-dresden.jpg
+- name: subway-subway.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway.jpg
+- name: miamibeach-miamibeach-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-space-pizza.jpg
+- name: bf-skinner-girl-reading-garden-flowers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-girl-reading-garden-flowers.jpg
+- name: oldhotel-oldhotel-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-aqua.jpg
+- name: dragon-desert-desert-dragon-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-sunday.jpg
+- name: christianity-christianity-under-construction-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-atari-missle.jpg
+- name: aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
+- name: server-cloud-server-racks-door-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-electricity.jpg
+- name: sand-hand-sand-hand-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-circuit.jpg
+- name: abandonedbuildings_plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_plentiful.jpg
+- name: catacombs-catacombs-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-light-dali.jpg
 ---
 Development Staff Assists Diocese, Parishes, Schools Through Appeals.&nbsp;Wit Of The Draw.&nbsp;Christmas Movie Night In Berwick.&nbsp;Trickster Elf Still At Large, Authorities Remain Vigilant.&nbsp;Things To Do, Christmas Eve.&nbsp;Bailey Sonny Jake Eugene Jenkins.&nbsp;Crisis Of School Violence Calls For Urgent Action, Florida Leaders Say.&nbsp;Craig Homes Shine In Annual Tour Of Lights.&nbsp;
